added homepage, test 22.42

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -22,7 +22,7 @@
   <!-- Home -->
   <div class="bg-image">
     <img src="{{ url_for('static', filename='Crows Library500.png') }}" alt="..." class="img-fluid">
-    <a href="{{ url_for('landing.home') }}" class="landing-link">
+    <a href="{{ url_for('homepage') }}" class="landing-link">
       <h2 class="landing-text">Speak Friend and Enter.</h2>
   </a>
   </div>
